--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -1,3 +1,13 @@
+# name: First workflow
+# on: workflow_dispatch
+# jobs:
+#   first-job:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Print greeting
+#         run: echo Hello World
+# This is a basic workflow to help you get started with Actions
+
 name: First workflow
 on: workflow_dispatch
 jobs:
@@ -5,4 +15,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Print greeting
-        run: echo Hello World
+        run: echo Hello, world!
