--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -1,13 +1,3 @@
-# name: First workflow
-# on: workflow_dispatch
-# jobs:
-#   first-job:
-#     runs-on: ubuntu-latest
-#     steps:
-#       - name: Print greeting
-#         run: echo Hello World
-# This is a basic workflow to help you get started with Actions
-
 name: First workflow
 on: workflow_dispatch
 jobs:
@@ -15,4 +5,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Print greeting
-        run: echo Hello, world!!!
+        run: echo "Hello World"
+# This is a basic workflow to help you get started with Actions
+
+# name: First workflow
+# on: workflow_dispatch
+# jobs:
+#   first-job:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Print greeting
+#         run: echo Hello, world!!!
