--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -6,6 +6,11 @@ jobs:
     steps:
       - name: Print greeting
         run: echo "Hello World"
+      - name: Print Good Bye
+        run: |
+         echo "Done1"
+         echo "Done2"
+         
 # This is a basic workflow to help you get started with Actions
 
 # name: First workflow
